syntax = "proto3";

option csharp_namespace = "Spiffe.Sample.Grpc.Mtls";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
